--- a/vscode_settings.json
+++ b/vscode_settings.json
@@ -6,5 +6,6 @@
             "after": ["<esc>"]
         }
     ],
-    "vim.useSystemClipboard": true
+    "vim.useSystemClipboard": true,
+    "workbench.iconTheme": "vscode-icons"
 }
