--- a/config/.tmux.conf
+++ b/config/.tmux.conf
@@ -1,10 +1,47 @@
 setw -g mode-keys vi
 
 # Set the prefix to Ctrl+a
-set -g prefix C-a
+set -g prefix C-s
 
 # Remove the old prefix
 unbind C-b
 
 # Send Ctrl+a to applications by pressing it twice
-bind C-a send-prefix
+bind C-s send-prefix
+
+# reload tmux config
+unbind r
+bind r source-file ~/.tmux.conf
+
+# vim pane movement
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+set-option -g status-position top
+
+# ~/.tmux.conf
+
+# Options to make tmux more pleasant
+set -g mouse on
+set -g default-terminal "tmux-256color"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
+
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -ag status-right "#{E:@catppuccin_status_directory}"
+
+run '~/.tmux/plugins/tpm/tpm'
