--- a/config/.tmux.conf
+++ b/config/.tmux.conf
@@ -13,6 +13,10 @@ bind C-s send-prefix
 unbind r
 bind r source-file ~/.tmux.conf
 
+# rebind new horizontal split
+unbind %
+bind e split-window -h
+
 # vim pane movement
 bind-key h select-pane -L
 bind-key j select-pane -D
