--- a/config/.tmux.conf
+++ b/config/.tmux.conf
@@ -34,6 +34,7 @@ set -g default-terminal "tmux-256color"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
