--- a/config/.tmux.conf
+++ b/config/.tmux.conf
@@ -25,6 +25,8 @@ bind-key l select-pane -R
 
 set-option -g status-position top
 
+set-option -g set-clipboard external
+
 # ~/.tmux.conf
 
 # Options to make tmux more pleasant
@@ -35,6 +37,7 @@ set -g default-terminal "tmux-256color"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
