--- a/config/.tmux.conf
+++ b/config/.tmux.conf
@@ -35,21 +35,14 @@ set -g default-terminal "tmux-256color"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-# Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
-
-# Make the status line pretty and add some modules
-set -g status-right-length 100
-set -g status-left-length 100
 set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -ag status-right "#{E:@catppuccin_status_directory}"
+set -g status-right ""
+set -ag status-right ""
+set -ag status-right ""
+set -ag status-right ""
 
 run '~/.tmux/plugins/tpm/tpm'
+set -gF status-style bg=default,fg=default
