--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -20,3 +20,7 @@ source = ~/.config/hypr/autostart.conf
 
 bindl=,switch:off:Lid Switch,exec,~/.config/hypr/clamshell_mode.sh open
 bindl=,switch:on:Lid Switch,exec,~/.config/hypr/clamshell_mode.sh close
+
+decoration {
+    rounding = 5
+}
