--- a/config/hypr/bindings.conf
+++ b/config/hypr/bindings.conf
@@ -39,5 +39,13 @@ bindd = SUPER, J, Move focus down, movefocus, d
 unbind = SUPER, up
 bindd = SUPER, up, Toggle split, togglesplit, # dwindle
 
+# Clamshell mode
+bindl=,switch:off:Lid Switch,exec,~/.config/hypr/clamshell_mode.sh open
+bindl=,switch:on:Lid Switch,exec,~/.config/hypr/clamshell_mode.sh close
+
+# Rebind fullscreen
+unbind = SUPER, F
+bindd = SUPER, F, Force full screen, fullscreen, 0
+
 # unbind = SUPER, SPACE
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
