hyprland monitor configuration

--- a/config/hypr/bindings.conf
+++ b/config/hypr/bindings.conf
@@ -42,10 +42,17 @@ bindd = SUPER, up, Toggle split, togglesplit, # dwindle
 # Clamshell mode
 bindl=,switch:off:Lid Switch,exec,~/.config/hypr/clamshell_mode.sh open
 bindl=,switch:on:Lid Switch,exec,~/.config/hypr/clamshell_mode.sh close
+bind=SUPER SHIFT,C,exec,~/.config/hypr/clamshell_mode.sh close
 
 # Rebind fullscreen
 unbind = SUPER, F
 bindd = SUPER, F, Force full screen, fullscreen, 0
+
+bind = SUPER SHIFT, H, movewindow, mon:DP-2
+bind = SUPER SHIFT, L, movewindow, mon:DP-1
+
+bind = SUPER CTRL, H, focusmonitor, DP-2 
+bind = SUPER CTRL, L, focusmonitor, DP-1
 
 # unbind = SUPER, SPACE
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
