--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -6,6 +6,8 @@
 # Optimized for retina-class 2x displays, like 13" 2.8K, 27" 5K, 32" 6K.
 env = GDK_SCALE,2
 monitor=,preferred,auto,auto
+monitor=DP-1,preferred,1920x0,auto
+monitor=DP-2,preferred,0x0,auto
 
 # Good compromise for 27" or 32" 4K monitors (but fractional!)
 # env = GDK_SCALE,1.75
