--- a/config/hypr/bindings.conf
+++ b/config/hypr/bindings.conf
@@ -5,8 +5,8 @@ $browser = omarchy-launch-browser
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory=$(omarchy-cmd-terminal-cwd)
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, B, Browser, exec, $browser
-bindd = SUPER, M, Music, exec, uwsm app -- spotify
-bindd = SUPER, N, Neovim, exec, $terminal -e nvim
+bindd = SUPER ALT, M, Music, exec, uwsm app -- spotify
+bindd = SUPER ALT, N, Neovim, exec, $terminal -e nvim
 bindd = SUPER, T, Activity, exec, $terminal -e btop
 bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
 bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
@@ -17,7 +17,7 @@ bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
 bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
-bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
+bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://gmail.com"
 bindd = SUPER, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
 bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.com/"
 bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-webapp "https://messages.google.com/web/conversations"
@@ -54,5 +54,8 @@ bind = SUPER SHIFT, L, movewindow, mon:DP-1
 bind = SUPER CTRL, H, focusmonitor, DP-2 
 bind = SUPER CTRL, L, focusmonitor, DP-1
 
-# unbind = SUPER, SPACE
-# bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
+# Minimize (move to special workspace)
+bind = SUPER, M, exec, ~/.config/hypr/move_all_windows.sh
+# Restore (bring back to current workspace)
+bind = SUPER, N, exec, ~/.config/hypr/move_all_windows.sh 9 
+bind = SUPER, S, togglespecialworkspace, magic
