--- a/config/hypr/input.conf
+++ b/config/hypr/input.conf
@@ -4,7 +4,7 @@ input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
   kb_layout = us
-  kb_options = compose:caps # ,grp:alts_toggle
+  kb_options = compose:rctrl # ,grp:alts_toggle
 
   # Change speed of keyboard repeat
   repeat_rate = 95
@@ -24,6 +24,5 @@ input {
     scroll_factor = 0.4
   }
 }
-
 # Scroll faster in the terminal
 windowrule = scrolltouchpad 1.5, class:Alacritty
