--- a/config/hypr/bindings.conf
+++ b/config/hypr/bindings.conf
@@ -57,5 +57,8 @@ bind = SUPER CTRL, L, focusmonitor, DP-1
 # Minimize (move to special workspace)
 bind = SUPER, M, exec, ~/.config/hypr/move_all_windows.sh
 # Restore (bring back to current workspace)
-bind = SUPER, N, exec, ~/.config/hypr/move_all_windows.sh 9 
+bind = SUPER ALT, M, exec, ~/.config/hypr/move_all_windows.sh 9 
 bind = SUPER, S, togglespecialworkspace, magic
+
+bindd = SUPER, N, Cycle to next window, cyclenext
+bindd = SUPER, P, Cycle to prev window, cyclenext, prev
