--- a/config/hypr/bindings.conf
+++ b/config/hypr/bindings.conf
@@ -5,8 +5,8 @@ $browser = omarchy-launch-browser
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory=$(omarchy-cmd-terminal-cwd)
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, B, Browser, exec, $browser
-bindd = SUPER ALT, M, Music, exec, uwsm app -- spotify
-bindd = SUPER ALT, N, Neovim, exec, $terminal -e nvim
+bindd = SUPER SHIFT, M, Music, exec, uwsm app -- spotify
+bindd = SUPER SHIFT, N, Neovim, exec, $terminal -e nvim
 bindd = SUPER, T, Activity, exec, $terminal -e btop
 bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
 bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
