--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -6,9 +6,15 @@
 # Optimized for retina-class 2x displays, like 13" 2.8K, 27" 5K, 32" 6K.
 env = GDK_SCALE,2
 monitor=,preferred,auto,auto
-monitor=DP-1,preferred,1920x0,auto
-monitor=DP-2,preferred,0x0,auto
+monitor=desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020,preferred,1920x0,auto
+monitor=desc:Dell Inc. Dell AW2518H 5WCM598O0RCU,preferred,0x0,auto
 
+workspace = 1,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020
+workspace = 2,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020
+workspace = 3,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020
+workspace = 4,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020
+workspace = 5,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020
+workspace = 6,monitor:desc:Dell Inc. Dell AW2518H 5WCM598O0RCU
 # Good compromise for 27" or 32" 4K monitors (but fractional!)
 # env = GDK_SCALE,1.75
 # monitor=,preferred,auto,1.666667
