update copy scripts wip

--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -13,7 +13,7 @@ workspace = 1,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020
 workspace = 2,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020
 workspace = 3,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020
 workspace = 4,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020
-workspace = 5,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020
+workspace = 5,monitor:desc:Dell Inc. Dell AW2518H 5WCM598O0RCU
 workspace = 6,monitor:desc:Dell Inc. Dell AW2518H 5WCM598O0RCU
 # Good compromise for 27" or 32" 4K monitors (but fractional!)
 # env = GDK_SCALE,1.75
