--- a/config/hypr/bindings.conf
+++ b/config/hypr/bindings.conf
@@ -3,6 +3,7 @@ $terminal = uwsm app -- alacritty
 $browser = omarchy-launch-browser
 
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory=$(omarchy-cmd-terminal-cwd)
+bindd = SUPER SHIFT, return, Terminal, exec, $terminal -e tmux attach
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER SHIFT, M, Music, exec, uwsm app -- spotify
