--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -17,7 +17,5 @@ source = ~/.config/hypr/input.conf
 source = ~/.config/hypr/bindings.conf
 source = ~/.config/hypr/envs.conf
 source = ~/.config/hypr/autostart.conf
+source = ~/.config/hypr/lookandfeel.conf
 
-decoration {
-    rounding = 5
-}
