--- a/config/hypr/bindings.conf
+++ b/config/hypr/bindings.conf
@@ -49,16 +49,17 @@ bind=SUPER SHIFT,C,exec,~/.config/hypr/clamshell_mode.sh close
 unbind = SUPER, F
 bindd = SUPER, F, Force full screen, fullscreen, 0
 
-bind = SUPER SHIFT, H, movewindow, mon:DP-2
-bind = SUPER SHIFT, L, movewindow, mon:DP-1
+bind = SUPER SHIFT, H, movewindow, mon:desc:Dell Inc. Dell AW2518H 5WCM598O0RCU
+bind = SUPER SHIFT, L, movewindow, mon:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020
 
-bind = SUPER CTRL, H, focusmonitor, DP-2 
-bind = SUPER CTRL, L, focusmonitor, DP-1
+bind = SUPER CTRL, H, focusmonitor, desc:Dell Inc. Dell AW2518H 5WCM598O0RCU 
+bind = SUPER CTRL, L, focusmonitor, desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020
 
 # Minimize (move to special workspace)
 bind = SUPER, M, exec, ~/.config/hypr/move_all_windows.sh
 # Restore (bring back to current workspace)
 bind = SUPER ALT, M, exec, ~/.config/hypr/move_all_windows.sh 9 
+bind = SUPER CTRL, M, movetoworkspacesilent, 9
 bind = SUPER, S, togglespecialworkspace, magic
 
 bindd = SUPER, N, Cycle to next window, cyclenext
