--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -8,12 +8,12 @@ monitor=desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020,preferred,1920x0,auto
 monitor=desc:Dell Inc. Dell AW2518H 5WCM598O0RCU,preferred,0x0,auto
 monitor=,preferred,auto,auto
 
-workspace = name:1,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020, default:true
-workspace = name:2,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020, default:true
-workspace = name:3,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020, default:true
-workspace = name:4,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020, default:true
-workspace = name:5,monitor:desc:Dell Inc. Dell AW2518H 5WCM598O0RCU, default:true
-workspace = name:6,monitor:desc:Dell Inc. Dell AW2518H 5WCM598O0RCU, default:true
+workspace = 1,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020, default:true
+workspace = 2,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020, default:true
+workspace = 3,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020, default:true
+workspace = 4,monitor:desc:LG Electronics LG ULTRAGEAR 305MXEZ1N020, default:true
+workspace = 5,monitor:desc:Dell Inc. Dell AW2518H 5WCM598O0RCU, default:true
+workspace = 6,monitor:desc:Dell Inc. Dell AW2518H 5WCM598O0RCU, default:true
 # Good compromise for 27" or 32" 4K monitors (but fractional!)
 # env = GDK_SCALE,1.75
 # monitor=,preferred,auto,1.666667
