--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -17,6 +17,6 @@ decorations = "None"
 [keyboard]
 bindings = [
 { key = "F11", action = "ToggleFullscreen" },
-{ key = "k", mods = "Control", action = "ScrollLineUp" },
-{ key = "j", mods = "Control", action = "ScrollLineDown" },
+{ key = "k", mods = "Alt", action = "ScrollLineUp" },
+{ key = "j", mods = "Alt", action = "ScrollLineDown" },
 ]
